--- a/index.html
+++ b/index.html
@@ -436,6 +436,36 @@
             </div> -->
         </div>
 
+        <div class="scene">
+            <div class="panel">
+                <img src="images/image_39.jpg" alt="Scene 3">
+            </div>
+            <!-- <div class="caption">
+                <span class="scene-number">SCENE 03</span>
+                <p>The environment shifts. A new challenge presents itself.</p>
+            </div> -->
+        </div>
+
+        <div class="scene">
+            <div class="panel">
+                <img src="images/image_40.jpg" alt="Scene 3">
+            </div>
+            <!-- <div class="caption">
+                <span class="scene-number">SCENE 03</span>
+                <p>The environment shifts. A new challenge presents itself.</p>
+            </div> -->
+        </div>
+
+        <div class="scene">
+            <div class="panel">
+                <img src="images/image_41.jpg" alt="Scene 3">
+            </div>
+            <!-- <div class="caption">
+                <span class="scene-number">SCENE 03</span>
+                <p>The environment shifts. A new challenge presents itself.</p>
+            </div> -->
+        </div>
+
         
 
         <!-- ... continue this pattern for all 38 images ... -->
