Update index.html - add one more photo

--- a/index.html
+++ b/index.html
@@ -466,6 +466,16 @@
             </div> -->
         </div>
 
+        <div class="scene">
+            <div class="panel">
+                <img src="images/0008_30.jpg" alt="Scene 3">
+            </div>
+            <!-- <div class="caption">
+                <span class="scene-number">SCENE 03</span>
+                <p>The environment shifts. A new challenge presents itself.</p>
+            </div> -->
+        </div>
+
         
 
         <!-- ... continue this pattern for all 38 images ... -->
